# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: hexlet-check.yml  pyci.yml
page_analyzer/: app.py  db.py  db_tools.py  project_validators.py  url_tools.py  urls.py
page_analyzer/templates/: base.html  frame.html  index.html  report.html  url.html  urls.html  wrapper.html
page_analyzer/templates/components/: footer.html  header.html  messages.html
test/: test_app.py  test_db_tools.py
tests/: conftest.py  create_screenshots_of_original.py  test_by_PP.py  test_by_playwright.py  test_html.py  test_playwright.py  test_url.py  test_urls.py  test_with_playwright.py
tests/fixtures/: fixture_for_requests.html  fixtures_urls.py  page.html
