[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer is a site that analyzes websites for SEO suitability."
authors = ["Sergei Mikurov <454004@mail.ru>"]
readme = "README.md"
homepage = "https://python-project-83-production-f22f.up.railway.app/"
repository = "https://github.com/serVmik/python-project-83"
documentation = "https://github.com/serVmik/python-project-83"
keywords = ["SEO", "website parsing"]
classifiers = [
    "Framework :: Flask",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "License :: Freeware",
    "Natural Language :: Russian",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
    "Topic :: Education :: Testing",
    "Topic :: Internet",
]
packages = [
    { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
validators = "^0.20.0"
psycopg2-binary = "^2.9.6"
requests = "^2.31.0"
beautifulsoup4 = "4.12.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"

[tool.poetry.group.playwright.dependencies]
pytest-playwright = "^0.3.3"
playwright = "^1.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
